--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trees in Melb</title>
+    <title>Green Melbourne</title>
 
     <!-- Semantic -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
@@ -22,7 +22,7 @@
      <div class="ui container">
          <a href="#top" class="header item" id="title">
              <img src="./img/logo.svg">&nbsp;
-             City Tree Planting
+             Green Melbourne
          </a>
 
         <a class="ui right item " href="#map_location">
@@ -64,7 +64,7 @@
             <br />
             <br />
             <div class="ui container" style="padding-left: 20px;">
-                <h1 class="title_tree">City of Melbourne - Tree Planting</h1>
+                <h1 class="title_tree">Green Melbourne - Tree Planting</h1>
                 <br />
                 <p style="color: #CCCCC1;">Melbourne’s tree population is vast – we have 70,000 council-owned trees,
                 <p style="color: #CCCCC1;">worth around $650 million.  This website enables you to explore the current 
