[Update] adjust the style of footer

--- a/index.html
+++ b/index.html
@@ -474,21 +474,21 @@
     <br />
     <br />
     <br />
-
-      <div class="ui inverted vertical segment footer"> <!--vertical to remove rounded corners -->
-        <div class="ui center aligned"> <!--居中-->        
-                
+    <div class="ui vertical segment footer"> <!--vertical to remove rounded corners -->
+      <div class="ui center aligned container"> <!--居中-->                
             <h4 class="ui inverted header m-text-thin m-text-spaced">Contact me</h4>
             <!--link list-->
             <div class="ui inverted link list">
-                <a href="#" class="item">E-mail: zhiyao.li@student.unimelb.edu.au</a>
-                <a href="https://github.com/Toraycaaa" class="item">Github: https://github.com/Toraycaaa</a>                      
+                <a href="#" class="item"><i class="envelope outline icon"></i>E-mail: zhiyao.li@student.unimelb.edu.au</a>
+                <a href="https://github.com/Toraycaaa" class="item"><i class="github icon"></i>Github: https://github.com/Toraycaaa</a>    
+                <a href="https://github.com/Toraycaaa/Green-Melbourne" class="item"><i class="github icon"></i>Source Code: https://github.com/Toraycaaa/Green-Melbourne</a>                  
             </div> 
                       
             <div class="ui inverted section divider"></div> <!-- a split line at bottom-->
             <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright 😁 2020 Designed by Toraycaaa</p>
         </div>
     </div>
+
 
 
     <script src="./trees.js"></script>
